// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render an active button 1`] = `
<button
  class="button active"
/>
`;

exports[`Render button 1`] = `
<button
  class="button"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render button with a different size 1`] = `
<button
  class="button small"
/>
`;

exports[`Render button with a prepended icon 1`] = `
<button
  class="button"
>
  <span
    aria-label="fa-trash-o"
    class="icon fa fa-trash-o"
  />
</button>
`;

exports[`Render button with dropdown indicator 1`] = `
<button
  class="button"
>
  <span
    aria-label="su-angle-down"
    class="dropdownIcon su-angle-down"
  />
</button>
`;

exports[`Render button with value 1`] = `
<button
  class="button"
  value="Click"
>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;

exports[`Render button without text 1`] = `
<button
  class="button"
/>
`;

exports[`Render disabled button 1`] = `
<button
  class="button"
  disabled=""
/>
`;

exports[`Render loading button 1`] = `
<button
  class="button"
>
  <div
    class="spinner loader"
    style="width:20px;height:20px"
  >
    <div
      class="doubleBounce1"
    />
    <div
      class="doubleBounce2"
    />
  </div>
  <span
    class="label"
  >
    Click
  </span>
</button>
`;
